--- a/assignments/07-javascript-intro/index.html
+++ b/assignments/07-javascript-intro/index.html
@@ -122,8 +122,10 @@ function calltextupdate()
 {
 alert("setting text");
 const somevalue = document.getElementById("somedayid").value;
+const [year, month, day] = somevalue.split("-");
+const formmated = day + "/" + month + "/" + year;
 const element = document.getElementById("outputtext");
-var somestring = "Your Date is:" + somevalue;
+var somestring = "You Picked the Date: " + formatted;
 console.log("somestring", somestring);
 element.innerHTML = somestring;
 }
