--- a/assignments/07-javascript-intro/index.html
+++ b/assignments/07-javascript-intro/index.html
@@ -141,7 +141,8 @@ function callimageframer()
 {
 alert("updating image framing");
 const element = document.getElementById("sunshineimage"); 
-element.style.border = "2px solid purple";    
+element.style.border = "2px solid"; 
+element.style.borderImage = "linear-gradient(90deg, blue, purple, red, green) 1";
 }
     
 </script>
