--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <div class="task-item">
             <h4>Assignment7</h4>
-            <a href="https://jssg33.github.io/usc242/assignments/07-javascript-intro/index.html"><img src="./images/USCMed.png" alt="Assignment5"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/07-javascript-intro/index.html"><img src="./images/assignment7.png" alt="Assignment7"></a>
             <h5>Javascript Basics</h5>
             <h6>Simple Javascript Excercises</h6>
         </div>
