--- a/assignments/07-javascript-intro/index.html
+++ b/assignments/07-javascript-intro/index.html
@@ -150,5 +150,5 @@ element.style.borderLeftColor = "purple";
     
 </script>
 </body>
-<footer>&copy 2025, Cocky Consulting Inc.</footer>
+<footer>&copy 2026 Cocky Consulting Inc.</footer>
 </html>
