--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </section>
 
 <section class="projectdetails">
-    <span style="align: left;"><H4>Project Tasks</H4></span>
+    <span style="float: left;"><H4 style="float: left;">Project Tasks</H4></span>
     
     <div class="projecttasks">
             <div class="project-item">
