--- a/index.html
+++ b/index.html
@@ -124,6 +124,18 @@
             <h5>Figma Wireframe Highlights</h5>
             <h6>Movie of Wireframe Layout</h6>
         </div>
+        <div class="project-item">
+            <h4>Project Task6</h4>
+            <a href="https://jssg33.github.io/usc242/project/wirefamecomplete/figmacomplete.pdf"><img src="https://jssg33.github.io/usc242/project/wirefame/images/FigmaHome.png" alt="FigmaPDF"></a>
+            <h5>Wireframe Complete</h5>
+            <h6>Home and Subpages All Modeled</h6>
+        </div>
+        <div class="project-item">
+            <h4>Project Task7</h4>
+            <a href="https://jssg33.github.io/usc242/project/wirefamecomplete/figmacomplete.mp4"><img src="https://jssg33.github.io/usc242/project/wirefame/images/FigmaHome.png" alt="FigmaMovie"></a>
+            <h5>Wireframe Complete Video</h5>
+            <h6>Movie of Wireframe Complete Updates</h6>
+        </div>
     </div>
 </section>    
     <!-- IDEA SECTIONS -->
