--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
         <div class="project-item">
             <h4>Project Task4</h4>
-            <a href="https://jssg33.github.io/usc242/project/wirefame/Wireframe.pdf"><img src="https://jssg33.github.io/usc242/project/wirefame/images/FigmaHome.png" alt="FigmaPDF"></a>
+            <a href="https://jssg33.github.io/usc242/project/wireframe/Wirefame.pdf"><img src="https://jssg33.github.io/usc242/project/wirefame/images/FigmaHome.png" alt="FigmaPDF"></a>
             <h5>Figma Wireframe Layout</h5>
             <h6>PDF Summary of Wireframe</h6>
         </div>
@@ -126,13 +126,13 @@
         </div>
         <div class="project-item">
             <h4>Project Task6</h4>
-            <a href="https://jssg33.github.io/usc242/project/wirefamecomplete/figmacomplete.pdf"><img src="https://jssg33.github.io/usc242/project/wirefame/images/FigmaHome.png" alt="FigmaPDF"></a>
+            <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete.pdf"><img src="https://jssg33.github.io/usc242/project/wireframecomplete/images/FigmaHome.png" alt="FigmaCompletePDF"></a>
             <h5>Wireframe Complete</h5>
             <h6>Home and Subpages All Modeled</h6>
         </div>
         <div class="project-item">
             <h4>Project Task7</h4>
-            <a href="https://jssg33.github.io/usc242/project/wirefamecomplete/figmacomplete.mp4"><img src="https://jssg33.github.io/usc242/project/wirefame/images/FigmaHome.png" alt="FigmaMovie"></a>
+            <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete.mp4"><img src="https://jssg33.github.io/usc242/project/wireframecomplete/images/FigmaHome.png" alt="FigmaMovie"></a>
             <h5>Wireframe Complete Video</h5>
             <h6>Movie of Wireframe Complete Updates</h6>
         </div>
