--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -83,34 +83,52 @@ margin: auto 0;
     <div align="center"><span align="center" style="text-align: center; vertical-align: middle;"><img src="./images/p.png" width="32%" height="300px"/><img src="./images/p2.png" width="32%" height="300px"/><img src="./images/p3.png" width="32%" height="300px"/></span></div>
 </div>
 
-<div class="row" align="center">
-  <div class="column1" style="background-color:lightblue; border: 2px solid black;">
-    <h2>My Webmaster Social Links</h2>
-       <ul>
-        <li><a href="https://www.greenvilleassociates.com">G/A HomePage</a></li>
-        <li><a href="https://www.glocation.info">GLI HomePage</a></li>
-        <li><a href="https://www.twitter.com/greenvilleassoc">Twitter</a></li>
-        <li><a href="https://facebook.com/greenvilleassociates">@Greenville at Facebook</a></li>
-    </ul>
-  </div>
-  <div class="column1" style="background-color:lightgreen; border: 2pt solid black">
-    <h2>App Sites</h2>
-      <ul>
-        <li><a href="./assignments/01-basic-html/index.html">Assignment1</a></li>
-        <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-cs/index.html">Assignment2</a></li>
-    </ul>
-  </div>
-<div class="column1" style="background-color: pink; border: 2px black solid;"><H2>Research Interests</H2>
-<ul>
-    <li>Network Management Systems</li>
-    <li>SSO Architectures</li>
-    <li>ERP Sales Tools</li>
-    <li> Marketing Systems</li>
-    <li>Enterprise Managment</li>
-    <li>AI Voice Tools</li>
-</ul>
-</div>
-</div>
+<section class="ideas">
+
+    <!-- IDEA 1 -->
+    <div class="idea left">
+        <div class="idea-text">
+            <h2>My Webmaster Social Links</h2>
+            <ul>
+                <li><a href="https://www.greenvilleassociates.com">G/A HomePage</a></li>
+                <li><a href="https://www.glocation.info">GLI HomePage</a></li>
+                <li><a href="https://www.twitter.com/greenvilleassoc">Twitter</a></li>
+                <li><a href="https://facebook.com/greenvilleassociates">@Greenville at Facebook</a></li>
+            </ul>
+        </div>
+        <img src="./images/p.png" alt="Webmaster Links">
+    </div>
+
+    <!-- IDEA 2 -->
+    <div class="idea right">
+        <div class="idea-text">
+            <h2>App Sites</h2>
+            <ul>
+                <li><a href="./assignments/01-basic-html/index.html">Assignment 1</a></li>
+                <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-cs/index.html">Assignment 2</a></li>
+            </ul>
+        </div>
+        <img src="./images/p2.png" alt="App Sites">
+    </div>
+
+    <!-- IDEA 3 -->
+    <div class="idea left">
+        <div class="idea-text">
+            <h2>Research Interests</h2>
+            <ul>
+                <li>Network Management Systems</li>
+                <li>SSO Architectures</li>
+                <li>ERP Sales Tools</li>
+                <li>Marketing Systems</li>
+                <li>Enterprise Management</li>
+                <li>AI Voice Tools</li>
+            </ul>
+        </div>
+        <img src="./images/p3.png" alt="Research Interests">
+    </div>
+
+</section>
+
 </div>
 
 
