--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -79,9 +79,32 @@ margin: auto 0;
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
-<div class="row">
-    <div align="center"><span align="center" style="text-align: center; vertical-align: middle;"><img src="./images/p.png" width="32%" height="300px"/><img src="./images/p2.png" width="32%" height="300px"/><img src="./images/p3.png" width="32%" height="300px"/></span></div>
+<!-- TASK SECTION -->
+<div class="tasks" style="margin: 0 auto; padding-top: 20px;">
+
+    <div class="task-item">
+        <h3>Webmaster Links</h3>
+        <a href="#">
+            <img src="./images/p.png" alt="Webmaster Links">
+        </a>
+    </div>
+
+    <div class="task-item">
+        <h3>App Sites</h3>
+        <a href="#">
+            <img src="./images/p2.png" alt="App Sites">
+        </a>
+    </div>
+
+    <div class="task-item">
+        <h3>Research Interests</h3>
+        <a href="#">
+            <img src="./images/p3.png" alt="Research Interests">
+        </a>
+    </div>
+
 </div>
+
 
 <section class="ideas">
 
