--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -81,6 +81,15 @@ margin: auto 0;
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
 <!-- TASK SECTION -->
 <div class="tasks" style="margin: 0 auto; padding-top: 20px;">
+<!-- VERY IMPORTANT TEXT SECTION -->
+<div class="important-text" style="margin: 20px auto; max-width: 900px;">
+    <h2>Very Important Text</h2>
+    <p>
+        This portfolio highlights my work across web development, research, and enterprise systems.
+        It includes links to my professional sites, academic assignments, and ongoing research interests.
+        Each section reflects my commitment to technology leadership, innovation, and continuous learning.
+    </p>
+</div>
 
     <div class="task-item">
         <h3>Webmaster Links</h3>
