--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -72,18 +72,22 @@ margin: auto 0;
         <a href="logout.html">Logout</a>
     </div>
 </div>
-<div class="container">
+<header>
 <div align="center"><H1>Portfolio</H1></div>
 <div align="center">John S. Stritzinger</div>
 <div align="center">Global Tech Executive</div>
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
+</header>
+   
+<!-- TOP SECTION: IMPORTANT TEXT + TASKS -->
+<section class="top-section"> 
 <!-- TASK SECTION -->
 <div class="tasks" style="margin: 0 auto; padding-top: 20px;">
 <!-- VERY IMPORTANT TEXT SECTION -->
 <div class="important-text" style="margin: 20px auto; max-width: 900px;">
-    <h2>Very Important Text</h2>
+    <h2>Portfolio</h2>
     <p>
         This portfolio highlights my work across web development, research, and enterprise systems.
         It includes links to my professional sites, academic assignments, and ongoing research interests.
