--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -96,21 +96,21 @@ margin: auto 0;
 </div>
 
     <div class="task-item">
-        <h3>Webmaster Links</h3>
+        <h3>CG2 React Tools</h3>
         <a href="#">
             <img src="./images/p.png" alt="Webmaster Links">
         </a>
     </div>
 
     <div class="task-item">
-        <h3>App Sites</h3>
+        <h3>MyLinkV3</h3>
         <a href="#">
             <img src="./images/p2.png" alt="App Sites">
         </a>
     </div>
 
     <div class="task-item">
-        <h3>Research Interests</h3>
+        <h3>Glocation.Info ISP Site</h3>
         <a href="#">
             <img src="./images/p3.png" alt="Research Interests">
         </a>
