--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <!-- Inner flex layout -->
     <link rel="stylesheet" href="layouthome.css">
 </head>
-
+<style>
+    .left 
+    { 
+        text-align: left; 
+        display: block; 
+        margin-right: auto;
+    }
+</style>
 <body>
 
 <!-- TOP BLACK MENU (site.css) -->
@@ -91,7 +98,7 @@
 </section>
 
 <section class="projectdetails">
-    <span style="float: left;"><H4 style="float: left;">Project Tasks</H4></span>
+    <H4 class="left">Project Tasks</H4></span>
     
     <div class="projecttasks">
             <div class="project-item">
