--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         text-align: left; 
         display: block; 
         margin-right: auto;
+        color: lightgreen;
     }
 </style>
 <body>
@@ -51,7 +52,7 @@
 
 <!-- TOP SECTION: IMPORTANT TEXT + TASKS -->
 <section class="top-section">
-<H4>Assignments</H4>
+<H4 class="left">Assignments</H4>
 
     <div class="tasks">
 
