--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
         margin-right: auto;
         color: lightgreen;
     }
+
+     .rightidea
+    { 
+        text-align: right; 
+        display: block; 
+        margin-left: auto;
+        color: black;
+    }
 </style>
 <body>
 
@@ -174,8 +182,8 @@
        </div>
     <div class="idea left">
            <div class="idea-text">
-        <h2>Assignments</h2>
-        <ul>
+        <h2 class="rightidea">Assignments</h2>
+        <ul class="rightidea">
             <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Assignment One - Landing + 1</a></li>
             <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html">Assignment Two - Tables and Lists</a></li>
             <li><a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html">Assignment Three - Portias Flexbox</a></li>
