--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
 
     <div class="idea right">
            <div class="idea-text">
-        <h2>Github Repo</h2>
-        <ul>
+        <h2 class="idearight">Github Repo</h2>
+        <ul class="idearight">
             <li><a href="https://github.com/jssg33/usc242/">Github Repository Access</a></li>
             <li><a href="https://jssg33.github.io/usc242/index.html">Github IO Main Page</a></li>
         </ul>
@@ -182,8 +182,8 @@
        </div>
     <div class="idea left">
            <div class="idea-text">
-        <h2 class="rightidea">Assignments</h2>
-        <ul class="rightidea">
+        <h2>Assignments</h2>
+        <ul>
             <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Assignment One - Landing + 1</a></li>
             <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html">Assignment Two - Tables and Lists</a></li>
             <li><a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html">Assignment Three - Portias Flexbox</a></li>
