--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <!-- TOP SECTION: IMPORTANT TEXT + TASKS -->
 <section class="top-section">
-<H4 class="left">Assignments</H4>
+<H2 class="left">Assignments</H2>
 
     <div class="tasks">
 
@@ -98,6 +98,12 @@
             <h6>Mirror USC Medicine Homepage.</h6>
         </div>
         <div class="task-item">
+            <h4>Assignment6</h4>
+            <a href="https://jssg33.github.io/usc242/assignments/05-med-recast/index.html"><img src="./images/USCMed.png" alt="Assignment5"></a>
+            <h5>Project SectionSplit</h5>
+            <h6>Seperate Project and Regular Assignments</h6>
+        </div>
+        <div class="task-item">
             <h4>Assignment7</h4>
             <a href="https://jssg33.github.io/usc242/assignments/07-javascript-intro/index.html"><img src="./images/assignment7.png" alt="Assignment7"></a>
             <h5>Javascript Basics</h5>
@@ -107,7 +113,7 @@
 </section>
 
 <section class="projectdetails">
-    <H4 class="left">Project Tasks</H4></span>
+    <H2 class="left">Project Tasks</H2></span>
     
     <div class="projecttasks">
             <div class="project-item">
