--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
     <div class="idea left">
            <div class="idea-text">
         <h2>Projects</h2>
+        <span><img src="./images/react.png" width="200px" height="200px" style="padding: 30px;" alt="Idea 1"><img src="./images/render.png" width="200px" height="200px" style="padding: 30px;" alt="Idea 1"></span>
         <ul>
             <li><a href="https://jssg33.github.io/usc242/project/part1/CSCE242PROJECTPART1v2.pdf" target="_blank">P1 - Project Description</a></li>
             <li><a href="https://api242.onrender.com/">P2 - Render React Backoffice</a></li>
@@ -173,7 +174,7 @@
             <li><a href="https://jssg33.github.io/usc242/project/wirefame/Wireframe.mp4">P5 - Figma Wireframe Movie</a></li>
         </ul>
     </div>
-         <img src="./images/react.png" width="200px" height="200px" alt="Idea 1">
+
        </div>
 
     <div class="idea right">
@@ -189,17 +190,16 @@
     <div class="idea left">
            <div class="idea-text">
         <h2>Assignments</h2>
-        <ul>
+        <img src="./images/assignment.png" width="200px" height="200px" style="padding: 30px;" alt="Idea 2">
+            <ul>
             <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Assignment One - Landing + 1</a></li>
             <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html">Assignment Two - Tables and Lists</a></li>
             <li><a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html">Assignment Three - Portias Flexbox</a></li>
             <li><a href="https://jssg33.github.io/usc242/242index.html">Assignment Four - Homepage Redesign</a></li>
             <li><a href="https://jssg33.github.io/usc242/assignments/05-med-recast/index.html">Assignment Five - CSS Recast</a></li>
-
         </ul>
         </div>
-        <img src="./images/assignment.png" width="200px" height="200px" alt="Idea 2">
-       </div>
+        </div>
 </section>
 
 <!-- BOTTOM SECTION: 3 FLEX COLUMNS -->
