--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
 </section>    
     <!-- IDEA SECTIONS -->
     <section class="ideas">
-    <div class="idea left">
-           <div class="idea-text">
+     <div class="idea left">
+        <span style="padding: 30px;"><img src="./images/react.png" width="200px" height="200px" alt="Idea 1"><img src="./images/render.png" width="200px" height="200px" alt="Idea 1"></span>
+         <div class="idea-text">
         <h2>Projects</h2>
-        <span><img src="./images/react.png" width="200px" height="200px" style="padding: 30px;" alt="Idea 1"><img src="./images/render.png" width="200px" height="200px" style="padding: 30px;" alt="Idea 1"></span>
         <ul>
             <li><a href="https://jssg33.github.io/usc242/project/part1/CSCE242PROJECTPART1v2.pdf" target="_blank">P1 - Project Description</a></li>
             <li><a href="https://api242.onrender.com/">P2 - Render React Backoffice</a></li>
@@ -189,10 +189,10 @@
         <img src="./images/github.png" width="200px" height="200px" alt="Idea 3">
        </div>
     <div class="idea left">
-           <div class="idea-text">
+        <span style="padding: 30px;"><img src="./images/assignment.png" width="200px" height="200px" alt="Idea 2"></span>
+        <div class="idea-text">
         <h2>Assignments</h2>
-        <img src="./images/assignment.png" width="200px" height="200px" style="padding: 30px;" alt="Idea 2">
-            <ul>
+          <ul>
             <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Assignment One - Landing + 1</a></li>
             <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html">Assignment Two - Tables and Lists</a></li>
             <li><a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html">Assignment Three - Portias Flexbox</a></li>
