--- a/assignments/06-sections/index.html
+++ b/assignments/06-sections/index.html
@@ -1,1 +1,248 @@
-someindex.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>USC242 HomePage</title>
+
+    <!-- Top menu bar -->
+    <link rel="stylesheet" href="site.css">
+
+    <!-- Inner flex layout -->
+    <link rel="stylesheet" href="layouthome.css">
+</head>
+<style>
+    .left 
+    { 
+        text-align: left; 
+        display: block; 
+        margin-right: auto;
+        color: lightgreen;
+    }
+
+     .rightidea
+    { 
+        text-align: right; 
+        display: block; 
+        margin-left: auto;
+        color: black;
+        width: 100%;
+    }
+</style>
+<body>
+
+<!-- TOP BLACK MENU (site.css) -->
+<div class="topnav">
+    <div class="dropdown">
+        <button class="dropbtn">Menu ▼</button>
+        <div class="dropdown-content">
+            <a href="index.html">Home</a>
+            <a href="242index.html">242 Home</a>
+            <a href="about.html">AboutMe</a>
+            <a href="interests.html">MyInterests</a>
+            <a href="usc.html">USC</a>
+            <a href="portfoliopage.html">Portfolio</a>
+            <a href="vitae.html">Vitae</a>
+        </div>
+    </div>
+
+    <div class="right-links">
+        <a href="login.html">Login</a>
+        <a href="logout.html">Logout</a>
+    </div>
+</div>
+
+<!-- EVERYTHING BELOW THIS POINT IS CONTROLLED BY layout.css -->
+
+<header>
+    <h1>SiteHome</h1>
+    <p>John S. Stritzinger</p>
+    <p>University of South Carolina</p>
+</header>
+
+<!-- TOP SECTION: IMPORTANT TEXT + TASKS -->
+<section class="top-section">
+<H2 class="left">Assignments</H2>
+
+    <div class="tasks">
+
+        <div class="task-item">
+            <h4>Assignment1</h4>
+            <a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.htm1"><img src="./images/assign1.png" alt="Assignment1"></a>
+            <h5>Initial Website Page</h5>
+            <h6>Initial Landing Page + 1</h6>
+        </div>
+        
+        <div class="task-item">
+            <h4>Assignment2</h4>
+            <a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html"><img src="./images/assign2.png" alt="Assignment2"></a>
+            <h5>Site With Tables</h5>
+            <h6>Custom Page w Tables & Quicklinks</h6>
+        </div>
+
+        <div class="task-item">
+            <h4>Assignment3</h4>
+            <a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html"><img src="./images/flex1.png" alt="Assignment3"></a>
+            <h5>Portias FlexTemplate</h5>
+            <h6>Flex Layout with Narrow/Wide</h6>
+        </div>
+   
+        <div class="task-item">
+            <h4>Assignment4</h4>
+            <a href="242index.html"><img src="./images/sitestyle.png" alt="Assignment4"></a>
+            <h5>HomePage Restyle</h5>
+            <h6>Add Modified Flex to Home.</h6>
+        </div>
+        <div class="task-item">
+            <h4>Assignment5</h4>
+            <a href="https://jssg33.github.io/usc242/assignments/05-med-recast/index.html"><img src="./images/USCMed.png" alt="Assignment5"></a>
+            <h5>CSS Page Two</h5>
+            <h6>Mirror USC Medicine Homepage.</h6>
+        </div>
+        <div class="task-item">
+            <h4>Assignment6</h4>
+            <a href="https://jssg33.github.io/usc242/assignments/06-sections/index.html"><img src="./images/yingyang.jpg" alt="Assignment5"></a>
+            <h5>Project SectionSplit</h5>
+            <h6>Seperate Project & Regular Sections</h6>
+        </div>
+        <div class="task-item">
+            <h4>Assignment7</h4>
+            <a href="https://jssg33.github.io/usc242/assignments/07-javascript-intro/index.html"><img src="./images/assignment7.png" alt="Assignment7"></a>
+            <h5>Javascript Basics</h5>
+            <h6>Simple Javascript Excercises</h6>
+        </div>
+    </div>
+</section>
+
+<section class="projectdetails">
+    <H2 class="left">Project Tasks</H2></span>
+    
+    <div class="projecttasks">
+            <div class="project-item">
+            <h4>Project Task1</h4>
+            <a href="https://jssg33.github.io/usc242/project/part1/CSCE242PROJECTPART1v2.pdf"><img src="./images/project.PNG" alt="Project1Description"></a>
+            <h5>Project Overview Document</h5>
+            <h6>ReactAPI URL(/licenses)</h6>
+        </div>    
+        <div class="project-item">
+            <h4>Project Task2</h4>
+            <a href="https://api242.onrender.com/"><img src="./images/renderapi.PNG" alt="Project2reactapi"></a>
+            <h5>React API Update</h5>
+            <h6>ReactAPI URL(/licenses)</h6>
+        </div>
+        <div class="project-item">
+            <h4>Project Task3</h4>
+            <a href="https://react242-ho2o.onrender.com/indexbase.html"><img src="./images/FusionLicenseManager.jpeg" alt="Project3reactui"></a>
+            <h5>React UI Update</h5>
+            <h6>React Temp Landing</h6>
+        </div>
+        <div class="project-item">
+            <h4>Project Task4</h4>
+            <a href="https://jssg33.github.io/usc242/project/wirefame/Wirefame.pdf"><img src="https://jssg33.github.io/usc242/project/wirefame/images/FigmaHome.png" alt="FigmaPDF"></a>
+            <h5>Figma Wireframe Layout</h5>
+            <h6>PDF Summary of Wireframe</h6>
+        </div>
+        <div class="project-item">
+            <h4>Project Task5</h4>
+            <a href="https://jssg33.github.io/usc242/project/wirefame/Wireframe.mp4"><img src="https://jssg33.github.io/usc242/project/wirefame/images/FigmaHome.png" alt="FigmaMovie"></a>
+            <h5>Figma Wireframe Highlights</h5>
+            <h6>Movie of Wireframe Layout</h6>
+        </div>
+        <div class="project-item">
+            <h4>Project Task6</h4>
+            <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete.pdf"><img src="https://jssg33.github.io/usc242/project/wireframecomplete/images/FigmaHome.png" alt="FigmaCompletePDF"></a>
+            <h5>Wireframe Complete</h5>
+            <h6>Home and Subpages All Modeled</h6>
+        </div>
+        <div class="project-item">
+            <h4>Project Task7</h4>
+            <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete.mp4"><img src="https://jssg33.github.io/usc242/project/wireframecomplete/images/FigmaHome.png" alt="FigmaMovie"></a>
+            <h5>Wireframe Complete Video</h5>
+            <h6>Movie of Wireframe Complete Updates</h6>
+        </div>
+    </div>
+</section>    
+    <!-- IDEA SECTIONS -->
+    <section class="ideas">
+     <div class="idea left">
+        <span style="padding: 30px;"><img src="./images/react.png" width="200px" height="200px" alt="Idea 1"><img src="./images/render.png" width="200px" height="200px" alt="Idea 1"></span>
+         <div class="idea-text">
+        <h2>Projects</h2>
+        <ul>
+            <li><a href="https://jssg33.github.io/usc242/project/part1/CSCE242PROJECTPART1v2.pdf" target="_blank">P1 - Project Description</a></li>
+            <li><a href="https://api242.onrender.com/">P2 - Render React Backoffice</a></li>
+            <li><a href="https://react242-ho2o.onrender.com/indexbase.html">P3 - Render UI</a></li>
+            <li><a href="https://jssg33.github.io/usc242/project/wirefame/Wireframe.pdf">P4 - Figma Wireframe Doc</a></li>
+            <li><a href="https://jssg33.github.io/usc242/project/wirefame/Wireframe.mp4">P5 - Figma Wireframe Movie</a></li>
+        </ul>
+    </div>
+
+       </div>
+
+    <div class="idea right">
+           <div class="idea-text">
+        <h2 class="idearight">Github Repo</h2>
+        <ul class="idearight">
+            <li><a href="https://github.com/jssg33/usc242/">Github Repository Access</a></li>
+            <li><a href="https://jssg33.github.io/usc242/index.html">Github IO Main Page</a></li>
+        </ul>
+        </div>
+        <img src="./images/github.png" width="200px" height="200px" alt="Idea 3">
+       </div>
+    <div class="idea left">
+        <span style="padding: 30px;"><img src="./images/assignment.png" width="200px" height="200px" alt="Idea 2"></span>
+        <div class="idea-text">
+        <h2>Assignments</h2>
+          <ul>
+            <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Assignment One - Landing + 1</a></li>
+            <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html">Assignment Two - Tables and Lists</a></li>
+            <li><a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html">Assignment Three - Portias Flexbox</a></li>
+            <li><a href="https://jssg33.github.io/usc242/242index.html">Assignment Four - Homepage Redesign</a></li>
+            <li><a href="https://jssg33.github.io/usc242/assignments/05-med-recast/index.html">Assignment Five - CSS Recast</a></li>
+        </ul>
+        </div>
+        </div>
+</section>
+
+<!-- BOTTOM SECTION: 3 FLEX COLUMNS -->
+<section class="middle-columns">
+
+    <!-- CENTER COLUMN: MIAMI IMAGES -->
+    <div class="mid-col">
+        <img src="./images/miami1.jpg" style="width:48%; border-radius:5px;">
+        <img src="./images/miami3.jpg" style="width:48%; border-radius:5px;">
+    </div>
+    <!-- LEFT COLUMN: QUICK LINKS -->
+    <div class="mid-col">
+        <h3>Quick Links</h3>
+        <hr>
+        <ul class="quick-links">
+            <li><a href="https://www.sc.edu" target="_blank">SC Home Page</a></li>
+            <li><a href="https://sc.edu/athletics/" target="_blank">SC Athletics</a></li>
+            <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>
+            <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>
+            <li><a href="https://www.espn.com" target="_blank">ESPN</a></li>
+            <li><a href="https://gamecocksonline.com/sports/mbball/cumestats/">Team Stats</a></li>
+        </ul>
+    </div>
+    <!-- RIGHT COLUMN: SITEMAP TABLE -->
+    <div class="mid-col">
+        <h3>Site Map</h3>
+        <hr>
+        <table class="sitemap-table">
+            <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
+            <tr><td>About</td><td><a href="../../about.html">About</a></td><td>01/15/2026</td></tr>
+            <tr><td>Interests</td><td><a href="../../interests.html">Interests</a></td><td>01/15/2026</td></tr>
+            <tr><td>USC Life</td><td><a href="../../usc.html">USC Life</a></td><td>01/15/2026</td></tr>
+            <tr><td>Portfolio</td><td><a href="../../portfoliopage.html">ClassWork</a></td><td>01/15/2026</td></tr>
+            <tr><td>Vitae</td><td><a href="../../vitae.html">Vitae</a></td><td>01/15/2026</td></tr>
+        </table>
+    </div>
+
+</section>
+
+<footer>
+    <p>&copy; 2025 Cocky Consulting, Inc.</p>
+</footer>
+
+</body>
+</html>
