--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
         <div class="task-item">
             <h4>Assignment6</h4>
-            <a href="https://jssg33.github.io/usc242/assignments/06-sections/index.html"><img src="./images/yingyang.jpg" alt="Assignment5"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/06-sections/index.html"><img src="./images/yinyang.jpg" alt="Assignment5"></a>
             <h5>Project SectionSplit</h5>
             <h6>Seperate Project & Regular Sections</h6>
         </div>
