--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
      .rightidea
     { 
-        text-align: right; 
+        float: right;
+	text-align: right; 
         display: block; 
-        margin-left: auto;
-        color: black;
+        color: lightgreen;
         width: 100%;
     }
 </style>
