--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
     <div class="idea right">
            <div class="idea-text">
-        <h2 class="idearight">Github Repo</h2>
+        <font color="lightgreen"><h2>Github Repo</h2></font>
         <ul class="idearight">
             <li><a href="https://github.com/jssg33/usc242/">Github Repository Access</a></li>
             <li><a href="https://jssg33.github.io/usc242/index.html">Github IO Main Page</a></li>
