--- a/index.html
+++ b/index.html
@@ -93,9 +93,15 @@
             <h6>Add Modified Flex to Home.</h6>
         </div>
         <div class="task-item">
-            <h4>Assignment5</h4>
+            <h4>Assignment5-A</h4>
             <a href="https://jssg33.github.io/usc242/assignments/05-med-recast/index.html"><img src="./images/USCMed.png" alt="Assignment5"></a>
-            <h5>CSS Page Two</h5>
+            <h5>CSS Page Two - Mozilla Conv</h5>
+            <h6>Mirror USC Medicine Homepage.</h6>
+        </div>
+		<div class="task-item">
+            <h4>Assignment5-B</h4>
+            <a href="https://jssg33.github.io/usc242/assignments/05-med-recast/usctemplate.html"><img src="./images/USCMed.png" alt="Assignment5"></a>
+            <h5>CSS Page Two - Manual</h5>
             <h6>Mirror USC Medicine Homepage.</h6>
         </div>
         <div class="task-item">
