--- a/index.html
+++ b/index.html
@@ -130,10 +130,16 @@
             <h6>ReactAPI URL(/licenses)</h6>
         </div>    
         <div class="project-item">
-            <h4>Project Task2</h4>
+            <h4>Project Task2 - A</h4>
             <a href="https://api242.onrender.com/"><img src="./images/renderapi.PNG" alt="Project2reactapi"></a>
             <h5>React API Update</h5>
             <h6>ReactAPI URL(/licenses)</h6>
+        </div>
+		<div class="project-item">
+            <h4>Project Task2 - B</h4>
+            <a href="https://api242.onrender.com/swagger"><img src="./images/renderapi.PNG" alt="Project2reactapi"></a>
+            <h5>React API with Swagger Tools</h5>
+            <h6>Swagger API</h6>
         </div>
         <div class="project-item">
             <h4>Project Task3</h4>
