--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
 		<div class="task-item">
             <h4>Assignment5-B</h4>
-            <a href="https://jssg33.github.io/usc242/assignments/05-med-recast/usctemplate.html"><img src="./images/USCMed.png" alt="Assignment5"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/05-med-recast/usctemplate.html"><img src="./images/uscmed3.PNG" alt="Assignment5"></a>
             <h5>CSS Page Two - Manual</h5>
             <h6>Mirror USC Medicine Homepage.</h6>
         </div>
