--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </div>
 		<div class="project-item">
             <h4>Project Task2 - B</h4>
-            <a href="https://api242.onrender.com/swagger"><img src="./images/renderapi.PNG" alt="Project2reactapi"></a>
+            <a href="https://api242.onrender.com/swagger"><img src="./images/greenswagger.PNG" alt="Project2reactapi"></a>
             <h5>React API with Swagger Tools</h5>
             <h6>Swagger API</h6>
         </div>
