--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
 
     <!-- CENTER COLUMN: MIAMI IMAGES -->
     <div class="mid-col">
-        <img id="miami1" src="./images/miami1.jpg" style="width:43%; border-radius:5px;">
-        <img id="miami3" src="./images/miami3.jpg" style="width:43%; border-radius:5px;">
+        <img id="miami1" src="./images/miami1.jpg">
+        <img id="miami3" src="./images/miami3.jpg">
     </div>
     <!-- LEFT COLUMN: QUICK LINKS -->
     <div class="mid-col">
