--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <li><a href="https://jssg33.github.io/usc242/project/wirefame/Wireframe.mp4">P5 - Figma Wireframe Movie</a></li>
         </ul>
     </div>
-		<span style="padding: 30px;"><img src="./images/react.png" width="200px" height="200px" alt="Idea 1"><img src="./images/render.png" width="200px" height="200px" alt="Idea 1"></span>
+		<span id="firstspan" style="padding: 30px;"><img src="./images/react.png" width="200px" height="200px" alt="Idea 1"><img src="./images/render.png" width="200px" height="200px" alt="Idea 1"></span>
        </div>
 
     <div class="idea right">
@@ -197,7 +197,7 @@
             <li><a href="https://jssg33.github.io/usc242/index.html">Github IO Main Page</a></li>
         </ul>
         </div>
-        <img src="./images/github.png" width="200px" height="200px" alt="Idea 3">
+        <span id="secondspan"><img src="./images/github.png" width="200px" height="200px" alt="Idea 3"></span>
        </div>
     <div class="idea left">
         <div class="idea-text">
@@ -210,7 +210,7 @@
             <li><a href="https://jssg33.github.io/usc242/assignments/05-med-recast/index.html">Assignment Five - CSS Recast</a></li>
         </ul>
         </div>
-        <span style="padding: 30px;"><img src="./images/assignment.png" width="200px" height="200px" alt="Idea 2"></span>
+        <span id="thirdspan" style="padding: 30px;"><img src="./images/assignment.png" width="200px" height="200px" alt="Idea 2"></span>
 	</div>
 </section>
 
