--- a/index.html
+++ b/index.html
@@ -17,16 +17,22 @@
         display: block; 
         margin-right: auto;
         color: lightgreen;
+			
     }
 
-     .rightidea
-    { 
-        float: right;
-	text-align: right; 
-        display: block; 
-        color: lightgreen;
-        width: 100%;
-    }
+   #firstspan
+   {
+	text-align: right;
+	float: right;
+	margin-right: 30px;
+   }
+
+   #thirdspan
+   {
+	text-align: right;
+	float: right;
+	margin-right: 30px;
+   }	
 </style>
 <body>
 
