--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <li><a href="https://jssg33.github.io/usc242/project/wirefame/Wireframe.mp4">P5 - Figma Wireframe Movie</a></li>
         </ul>
     </div>
-		<span id="firstspan" style="padding: 30px;"><img src="./images/react.png" width="200px" height="200px" alt="Idea 1"><img src="./images/render.png" width="200px" height="200px" alt="Idea 1"></span>
+		<span id="firstspan" style="padding: 30px;"><img id="firstimage" src="./images/react.png" alt="Idea 1"><img id="secondimage" src="./images/render.png" alt="Idea 1"></span>
        </div>
 
     <div class="idea right">
@@ -203,7 +203,7 @@
             <li><a href="https://jssg33.github.io/usc242/index.html">Github IO Main Page</a></li>
         </ul>
         </div>
-        <span id="secondspan"><img src="./images/github.png" width="200px" height="200px" alt="Idea 3"></span>
+        <span id="secondspan"><img id="thirdimage" src="./images/github.png" width="200px" height="200px" alt="Idea 3"></span>
        </div>
     <div class="idea left">
         <div class="idea-text">
@@ -216,7 +216,7 @@
             <li><a href="https://jssg33.github.io/usc242/assignments/05-med-recast/index.html">Assignment Five - CSS Recast</a></li>
         </ul>
         </div>
-        <span id="thirdspan" style="padding: 30px;"><img src="./images/assignment.png" width="200px" height="200px" alt="Idea 2"></span>
+        <span id="thirdspan" style="padding: 30px;"><img id="fourthimage" src="./images/assignment.png" alt="Idea 2"></span>
 	</div>
 </section>
 
