--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
 
     <!-- CENTER COLUMN: MIAMI IMAGES -->
     <div class="mid-col">
-        <img id="miami1" src="./images/miami1.jpg">
-        <img id="miami3" src="./images/miami3.jpg">
+        <span id="mobilepics"><img id="miami1" src="./images/miami1.jpg">
+        <img id="miami3" src="./images/miami3.jpg"></span>
     </div>
     <!-- LEFT COLUMN: QUICK LINKS -->
     <div class="mid-col">
