--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
     <link rel="stylesheet" href="layouthome.css">
 </head>
 <style>
-    .left 
+    .someleft 
     { 
         text-align: left; 
         display: block; 
         margin-right: auto;
         color: lightgreen;
-			
-    }
+	}
 
    #firstspan
    {
