--- a/242index.html
+++ b/242index.html
@@ -84,7 +84,7 @@
     <section class="ideas">
     <div class="idea left">
            <div class="idea-text">
-        <h2>Projects</h2>
+        <span align="left" class="left"><h2>Projects</h2></span>
         <ul>
             <li><a href="https://jssg33.github.io/usc242/project/part1/CSCE242PROJECTPART1v2.pdf" target="_blank">Project Description</a></li>
         </ul>
