--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
 </div>
 
-<!-- EVERYTHING BELOW THIS POINT IS CONTROLLED BY layout.css -->
+<!-- EVERYTHING BELOW THIS POINT IS CONTROLLED BY layouthome.css -->
 
 <header>
     <h1>SiteHome</h1>
