--- a/usc.html
+++ b/usc.html
@@ -47,7 +47,7 @@
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
-<div class="image-row" align="center"><figure><img src="./images/image6.png" width="40%" max-height="440px"><figcaption>USC Sports</figcaption></figure><figure><img src="./images/image7.png" width="40%" max-height="440px"><figcaption>Campus Views</figcaption></figure></div>    
+<div class="image-row" align="center"><figure><img src="./images/image6.png" width="40%" height="440px"><figcaption>USC Sports</figcaption></figure><figure><img src="./images/image7.png" width="40%" height="440px"><figcaption>Campus Views</figcaption></figure></div>    
 </div>
 <section class="middle-columns">
 
