--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
-<div class="image-row" align="center"><figure><img src="./images/image2.png" width="40%" max-height="440px"><figcaption>Skiing</figcaption></figure><figure><img src="./images/image3.png" width="40%" max-height="440px"><figcaption>OutDoor Adventures</figcaption></figure></div>    
+<div class="image-row" align="center"><figure><img src="./images/image2.png" width="40%" height="440px"><figcaption>Skiing</figcaption></figure><figure><img src="./images/image3.png" width="40%" height="440px"><figcaption>OutDoor Adventures</figcaption></figure></div>    
 </div>
 <!-- BOTTOM SECTION: 3 FLEX COLUMNS -->
 <section class="middle-columns">
@@ -91,6 +91,7 @@
     <p>&copy; 2025 Cocky Consulting, Inc.</p>
   </footer>
 </html>
+
 
 
 
