--- a/interests.html
+++ b/interests.html
@@ -54,7 +54,7 @@
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
-<div class="image-row" align="center"><figure><img src="./images/image4.png" width="40%" height="440px"><figcaption>Youth Soccer</figcaption></figure><figure><img src="./images/image5.png" width="40%" height="440px"><figcaption>Golf</figcaption></figure></div>    
+<div class="image-row" align="center"><figure><img id="image1" src="./images/image4.png" width="40%" height="440px"><figcaption>Youth Soccer</figcaption></figure><figure><img id="image2" src="./images/image5.png" width="40%" height="440px"><figcaption>Golf</figcaption></figure></div>    
 </div>
 <!-- BOTTOM SECTION: 3 FLEX COLUMNS -->
 <section class="middle-columns">
