--- a/vitae.html
+++ b/vitae.html
@@ -38,8 +38,8 @@
 <div align="center"><span align=center><img src="./images/image1.png" width="150px" height="150px"></span></div>     
 <div align="center">John S. Stritzinger</div>
 <div align="center">Global Tech Executive & Graduate Researcher</div>    
-<div align="center">Columbia, South Carolina 29201</div><BR><BR>
-<div align="center">stritzj@email.sc.edu</div><BR><BR>
+<div align="center">Columbia, South Carolina 29201</div><BR>
+<div align="center">stritzj@email.sc.edu</div><BR>
 
 <HR>
 <div id="hist_work"><H4>Database Administration(DBA) & Principal Data Architecture Assignments</H4><H5>Bank of America/MBNA Treasury Systems, M&T Bank/Wilmington Trust Treasury Systems, Bank of America Consumer Services, Bank of America Global Operations, Centurylink/Level(3) Network Operations, Cincinnati Bell Enterprise Sales Operations, Bank of America Call Center Operations</H5></div>
