--- a/vitae.html
+++ b/vitae.html
@@ -38,7 +38,7 @@
 <div align="center"><span align=center><img src="./images/image1.png" width="150px" height="150px"></span></div>     
 <div align="center">John S. Stritzinger</div>
 <div align="center">Global Tech Executive & Graduate Researcher</div>    
-<div align="center">Columbia, South Carolina 29201</div><BR>
+<div align="center">Columbia, South Carolina 29201</div>
 <div align="center">stritzj@email.sc.edu</div><BR>
 
 <HR>
