--- a/examples/03-js/index.html
+++ b/examples/03-js/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title></title>
+    <script src="./js/script.js"></script>
+    <title>242 Class</title>
   </head>
   <body>
     
