--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         </div>
         <div class="project-item">
             <h4>Project Task3</h4>
-            <a href="https://react242-ho2o.onrender.com/index.html"><img src="./images/FusionLicenseManager.jpeg" alt="Project3reactui"></a>
+            <a href="https://react242-ho2o.onrender.com/"><img src="./images/FusionLicenseManager.jpeg" alt="Project3reactui"></a>
             <h5>React UI Update</h5>
             <h6>React Temp Landing</h6>
         </div>
