--- a/index.html
+++ b/index.html
@@ -138,19 +138,25 @@
             <h4>Project Task2 - A</h4>
             <a href="https://api242.onrender.com/"><img src="./images/renderapi.PNG" alt="Project2reactapi"></a>
             <h5>React API Update</h5>
-            <h6>ReactAPI URL(/licenses)</h6>
+            <h6>ReactAPI Base URL(/licenses)</h6>
         </div>
 		<div class="project-item">
             <h4>Project Task2 - B</h4>
             <a href="https://api242.onrender.com/swagger"><img src="./images/greenswagger.PNG" alt="Project2reactapi"></a>
             <h5>React API with Swagger Tools</h5>
-            <h6>Swagger API</h6>
+            <h6>Swagger API - Username "admin" - Password "spirit"</h6>
         </div>
         <div class="project-item">
-            <h4>Project Task3</h4>
+            <h4>Project Task3A</h4>
             <a href="https://react242-ho2o.onrender.com/"><img src="./images/FusionLicenseManager.jpeg" alt="Project3reactui"></a>
             <h5>React UI Update</h5>
-            <h6>React Temp Landing</h6>
+            <h6>React LicenseManager Homepage</h6>
+        </div>
+		<div class="project-item">
+            <h4>Project Task3B</h4>
+            <a href="https://figmamanagerui.onrender.com/"><img src="./images/FusionLicenseManager.jpeg" alt="Project3reactui"></a>
+            <h5>React UI - AI Build</h5>
+            <h6>React LicenseManager Homepage Built By Figma w/ClaudeAI</h6>
         </div>
         <div class="project-item">
             <h4>Project Task4</h4>
