--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
         <div class="task-item">
             <h4>Assignment6</h4>
-            <a href="https://jssg33.github.io/usc242/assignments/06-sections/index.html"><img src="./images/yinyang.jpg" alt="Assignment5"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/06-sections/index.html"><img src="./images/yinyang.jpg" alt="Assignment06"></a>
             <h5>Project SectionSplit</h5>
             <h6>Seperate Project & Regular Sections</h6>
         </div>
@@ -119,7 +119,31 @@
             <h4>Assignment7</h4>
             <a href="https://jssg33.github.io/usc242/assignments/07-javascript-intro/index.html"><img src="./images/assignment7.png" alt="Assignment7"></a>
             <h5>Javascript Basics</h5>
-            <h6>Simple Javascript Excercises</h6>
+            <h6>Simple Javascript Basics Excercises</h6>
+        </div>
+		<div class="task-item">
+            <h4>Assignment8</h4>
+            <a href="https://jssg33.github.io/usc242/assignments/08-javascript-conditionals/index.html"><img src="./images/assignment08.png" alt="Assignment8"></a>
+            <h5>Javascript Conditionals</h5>
+            <h6>Simple Javascript Conditional Excercises</h6>
+        </div>
+		<div class="task-item">
+            <h4>Assignment9</h4>
+            <a href="https://jssg33.github.io/usc242/assignments/09-javascript-loops/index.html"><img src="./images/assignment09.png" alt="Assignment9"></a>
+            <h5>Javascript Loops</h5>
+            <h6>Simple Javascript Loop Excercises</h6>
+        </div>
+		<div class="task-item">
+            <h4>Assignment10</h4>
+            <a href="https://jssg33.github.io/usc242/assignments/10-javascript-arrays/index.html"><img src="./images/assignment10.png" alt="Assignment10"></a>
+            <h5>Javascript Arrays</h5>
+            <h6>Simple Javascript Array Excercises</h6>
+        </div>
+		<div class="task-item">
+            <h4>Assignment11</h4>
+            <a href="https://jssg33.github.io/usc242/assignments/11-javascript-classes/index.html"><img src="./images/assignment11.png" alt="Assignment11"></a>
+            <h5>Javascript Classes</h5>
+            <h6>Simple Javascript Class Exercises</h6>
         </div>
     </div>
 </section>
