--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@
         </div>
         <div class="project-item">
             <h4>Project Task3A</h4>
-            <a href="https://react242-ho2o.onrender.com/"><img src="./images/FusionLicenseManager.jpeg" alt="Project3reactui"></a>
+            <a href="https://react242-ho2o.onrender.com/"><img src="./images/FusionLicenseManager.jpeg" alt="Project3Areactui"></a>
             <h5>React UI Update</h5>
             <h6>React LicenseManager Homepage</h6>
         </div>
 		<div class="project-item">
             <h4>Project Task3B</h4>
-            <a href="https://figmamanagerui.onrender.com/"><img src="./images/FusionLicenseManager.jpeg" alt="Project3reactui"></a>
+            <a href="https://figmamanagerui.onrender.com/"><img src="./images/ClaudeAI.png" alt="Project3Breactui"></a>
             <h5>React UI - AI Build</h5>
             <h6>React LicenseManager Homepage Built By Figma w/ClaudeAI</h6>
         </div>
