--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <div class="project-item">
             <h4>Project Task2 - A</h4>
             <a href="https://api242.onrender.com/"><img src="./images/renderapi.PNG" alt="Project2reactapi"></a>
-            <h5>React API Update</h5>
+            <h5>React API Root</h5>
             <h6>ReactAPI Base URL(/licenses)</h6>
         </div>
 		<div class="project-item">
@@ -205,6 +205,67 @@
             <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete.mp4"><img src="https://jssg33.github.io/usc242/project/wireframecomplete/images/FigmaHome.png" alt="FigmaMovie"></a>
             <h5>Wireframe Complete Video</h5>
             <h6>Movie of Wireframe Complete Updates</h6>
+        </div>
+		
+		        <div class="project-item">
+            <h4>Project Task8</h4>
+            <a href="https://jssg33.github.io/usc242/project/wireframe/Wireframe.pdf"><img src="https://jssg33.github.io/usc242/project/wireframe/images/FigmaHome.png" alt="FigmaPDF"></a>
+            <h5>TBD</h5>
+            <h6>TBD</h6>
+        </div>
+        <div class="project-item">
+            <h4>Project Task9</h4>
+            <a href="https://jssg33.github.io/usc242/project/wireframe/Wireframe.mp4"><img src="https://jssg33.github.io/usc242/project/wireframe/images/FigmaHome.png" alt="FigmaMovie"></a>
+            <h5>TBD</h5>
+            <h6>TBD</h6>
+        </div>
+        <div class="project-item">
+            <h4>Project Task10</h4>
+            <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete.pdf"><img src="https://jssg33.github.io/usc242/project/wireframecomplete/images/FigmaHome.png" alt="FigmaCompletePDF"></a>
+            <h5>TBD</h5>
+            <h6>TBD</h6>
+        </div>
+        <div class="project-item">
+            <h4>Project Task11</h4>
+            <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete.mp4"><img src="https://jssg33.github.io/usc242/project/wireframecomplete/images/FigmaHome.png" alt="FigmaMovie"></a>
+            <h5>TBD</h5>
+            <h6>TBD</h6>
+        </div>
+		<div class="project-item">
+            <h4>Project Task12</h4>
+            <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete.pdf"><img src="https://jssg33.github.io/usc242/project/wireframecomplete/images/FigmaHome.png" alt="FigmaCompletePDF"></a>
+            <h5>TBD</h5>
+            <h6>TBD</h6>
+        </div>
+        <div class="project-item">
+            <h4>Project Task13</h4>
+            <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete.mp4"><img src="https://jssg33.github.io/usc242/project/wireframecomplete/images/FigmaHome.png" alt="FigmaMovie"></a>
+            <h5>TBD</h5>
+            <h6>TBD</h6>
+        </div>
+		        <div class="project-item">
+            <h4>Project Task14</h4>
+            <a href="https://jssg33.github.io/usc242/project/wireframe/Wireframe.pdf"><img src="https://jssg33.github.io/usc242/project/wireframe/images/FigmaHome.png" alt="FigmaPDF"></a>
+            <h5>TBD</h5>
+            <h6>TBD</h6>
+        </div>
+        <div class="project-item">
+            <h4>Project Task15</h4>
+            <a href="https://jssg33.github.io/usc242/project/wireframe/Wireframe.mp4"><img src="https://jssg33.github.io/usc242/project/wireframe/images/FigmaHome.png" alt="FigmaMovie"></a>
+            <h5>TBD</h5>
+            <h6>TBD</h6>
+        </div>
+        <div class="project-item">
+            <h4>Project Task16</h4>
+            <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete.pdf"><img src="https://jssg33.github.io/usc242/project/wireframecomplete/images/FigmaHome.png" alt="FigmaCompletePDF"></a>
+            <h5>TBD</h5>
+            <h6>TBD</h6>
+        </div>
+        <div class="project-item">
+            <h4>Project Task17</h4>
+            <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete.mp4"><img src="https://jssg33.github.io/usc242/project/wireframecomplete/images/FigmaHome.png" alt="FigmaMovie"></a>
+            <h5>TBD</h5>
+            <h6>TBD</h6>
         </div>
     </div>
 </section>    
