--- a/index.html
+++ b/index.html
@@ -123,25 +123,25 @@
         </div>
 		<div class="task-item">
             <h4>Assignment8</h4>
-            <a href="https://jssg33.github.io/usc242/assignments/08-javascript-conditionals/index.html"><img src="./images/assignment08.png" alt="Assignment8"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/08-javascript-conditionals/index.html"><img src="./images/TBD.png" alt="Assignment8"></a>
             <h5>Javascript Conditionals</h5>
             <h6>Simple Javascript Conditional Excercises</h6>
         </div>
 		<div class="task-item">
             <h4>Assignment9</h4>
-            <a href="https://jssg33.github.io/usc242/assignments/09-javascript-loops/index.html"><img src="./images/assignment09.png" alt="Assignment9"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/09-javascript-loops/index.html"><img src="./images/TBD.png" alt="Assignment9"></a>
             <h5>Javascript Loops</h5>
             <h6>Simple Javascript Loop Excercises</h6>
         </div>
 		<div class="task-item">
             <h4>Assignment10</h4>
-            <a href="https://jssg33.github.io/usc242/assignments/10-javascript-arrays/index.html"><img src="./images/assignment10.png" alt="Assignment10"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/10-javascript-arrays/index.html"><img src="./images/TBD.png" alt="Assignment10"></a>
             <h5>Javascript Arrays</h5>
             <h6>Simple Javascript Array Excercises</h6>
         </div>
 		<div class="task-item">
             <h4>Assignment11</h4>
-            <a href="https://jssg33.github.io/usc242/assignments/11-javascript-classes/index.html"><img src="./images/assignment11.png" alt="Assignment11"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/11-javascript-classes/index.html"><img src="./images/TBD.png" alt="Assignment11"></a>
             <h5>Javascript Classes</h5>
             <h6>Simple Javascript Class Exercises</h6>
         </div>
