--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         </div>
         <div class="project-item">
             <h4>Project Task7</h4>
-            <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete2.mp4"><img src="https://jssg33.github.io/usc242/project/wireframecomplete/images/S1.png" alt="FigmaMovie"></a>
+            <a href="https://youtu.be/cWpmxmjU8AY" target="_blank"><img src="https://jssg33.github.io/usc242/project/wireframecomplete/images/S1.png" alt="FigmaMovie"></a>
             <h5>Wireframe Complete Video</h5>
             <h6>Movie of Wireframe Complete Updates</h6>
         </div>
