--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
 		
 		        <div class="project-item">
             <h4>Project Task8</h4>
-            <a href="https://jssg33.github.io/usc242/project/wireframe/Wireframe.pdf"><img src="./images/TBD.png" alt="FigmaPDF"></a>
-            <h5>TBD</h5>
-            <h6>TBD</h6>
+            <a href="https://jssg33.github.io/usc242/project/homepage/index.html"><img src="./images/TBD.png" alt="FigmaPDF"></a>
+            <h5>Project Homepage</h5>
+            <h6>Convert Wireframe to HTML Homepage</h6>
         </div>
         <div class="project-item">
             <h4>Project Task9</h4>
