--- a/examples/03-js/index.html
+++ b/examples/03-js/index.html
@@ -3,7 +3,7 @@
     <script src="./js/script.js"></script>
     <title>242 Class</title>
 
-    <stle>
+    <style>
       .column{width: 33%;}
       .container{postition: relative; width: 1600px; margin: 0 auto;}
 
