--- a/examples/03-js/index.html
+++ b/examples/03-js/index.html
@@ -14,9 +14,9 @@
 
   <div class="container">
   <div class="row">
-    <div class="column"></div>
-    <div class="column"></div>
-    <div class="column"></div>
+    <div class="column">Col1</div>
+    <div class="column">Col2</div>
+    <div class="column">Col3<br><button class="ball"></button></div>
   </div>
 
     
