--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 		
 		        <div class="project-item">
             <h4>Project Task8</h4>
-            <a href="https://jssg33.github.io/usc242/project/homepage/index.html"><img src="./images/TBD.png" alt="FigmaPDF"></a>
+            <a href="https://jssg33.github.io/usc242/project/homepage/index.html"><img src="./images/homepage.png" alt="FigmaPDF"></a>
             <h5>Project Homepage</h5>
             <h6>Convert Wireframe to HTML Homepage</h6>
         </div>
